fixed spacing

--- a/styles/home.css
+++ b/styles/home.css
@@ -16,7 +16,7 @@
   max-width: 1051px;
   width: 100%;
   margin-top: 146px;
-  margin-bottom: 112px;
+  margin-bottom: 77px;
   background-color: #fafafa;
   border: 1px dashed #d5d5d5;
   border-radius: 5px;
